--- a/BlazorBrandstof/appsettings.json
+++ b/BlazorBrandstof/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "brandstof": "Server=localhost;Port=3306;Database=brandstof;Uid=user;Pwd=pwd123!;"
+  }
 }
