--- a/BlazorBrandstof/BlazorBrandstof.csproj
+++ b/BlazorBrandstof/BlazorBrandstof.csproj
@@ -13,4 +13,9 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.1.35" />
+      <PackageReference Include="MySqlConnector" Version="2.3.7" />
+    </ItemGroup>
+
 </Project>
