--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ obj/
 /packages/
 riderModule.iml
 /_ReSharper.Caches/
+.idea/.idea.BlazorBrandstof/.idea/dataSources.xml
+.idea/.idea.BlazorBrandstof/.idea/dataSources.xml
+.idea/.idea.BlazorBrandstof/.idea/dataSources.xml
