--- a/BlazorBrandstof/appsettings.Development.json
+++ b/BlazorBrandstof/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "brandstof": "Server=127.0.0.1;Port=3306;Database=brandstof;Uid=root;Pwd=123test!;"
   }
 }
