--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ riderModule.iml
 /_ReSharper.Caches/
 .idea/.idea.BlazorBrandstof/.idea/dataSources.xml
 .idea/.idea.BlazorBrandstof/.idea/sqldialects.xml
+.idea/.idea.BlazorBrandstof/.idea/dataSources.xml
+.idea/.idea.BlazorBrandstof/.idea/dataSources.xml
+.idea/config/applicationhost.config
+.idea/.idea.BlazorBrandstof/.idea/dataSources.xml
