--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ riderModule.iml
 .idea/config/applicationhost.config
 BlazorBrandstof/appsettings.Development.json
 BlazorBrandstof/appsettings.json
+BlazorBrandstof/appsettings.Development.json
+BlazorBrandstof/appsettings.json
