--- a/BlazorBrandstof/appsettings.json
+++ b/BlazorBrandstof/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "brandstof": "Server=localhost;Port=3306;Database=brandstof;Uid=user;Pwd=pwd123!;"
+    "brandstof": "Server=localhost;Port=3306;Database=brandstof;Uid=root;Pwd=Turkiye37!;"
   }
 }
