Refactoring and proper RoundRepo implementation

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ BlazorBrandstof/appsettings.Development.json
 BlazorBrandstof/appsettings.json
 BlazorBrandstof/appsettings.Development.json
 BlazorBrandstof/appsettings.json
+BlazorBrandstof/appsettings.Development.json
+BlazorBrandstof/appsettings.json
