--- a/BlazorBrandstof/appsettings.Development.json
+++ b/BlazorBrandstof/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "brandstof": "Server=localhost;Port=3306;Database=brandstof;Uid=root;Pwd=123test!;"
+    "brandstof": "Server=localhost;Port=3306;Database=brandstof;Uid=root;Pwd=Turkiye37!;"
   }
 }
