toevoegen checkout pagina

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ BlazorBrandstof/appsettings.Development.json
 BlazorBrandstof/appsettings.json
 BlazorBrandstof/appsettings.Development.json
 BlazorBrandstof/appsettings.json
+BlazorBrandstof/appsettings.Development.json
+BlazorBrandstof/appsettings.json
