--- a/BlazorBrandstof/appsettings.Development.json
+++ b/BlazorBrandstof/appsettings.Development.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "brandstof": "Server=localhost;Port=3306;Database=brandstof;Uid=root;Pwd=Turkiye37!;"
+    "brandstof": "Server=localhost;Port=3306;Database=brandstof;Uid=root;Pwd=1932pkgjkl12;"
   }
 }
