--- a/BlazorBrandstof/appsettings.Development.json
+++ b/BlazorBrandstof/appsettings.Development.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "brandstof": "Server=localhost;Port=3306;Database=brandstof;Uid=root;Pwd=root;"
+    "brandstof": "Server=localhost;Port=3306;Database=brandstof;Uid=root;Pwd=123test!;"
   }
 }
